test/compile_errors/stage1/obj/use_implicit_casts_to_assign_null_to_non-nullable_pointer.zig
export fn entry() void {
    var x: i32 = 1234;
    var p: *i32 = &x;
    var pp: *?*i32 = &p;
    pp.* = null;
    var y = p.*;
    _ = y;
}

// use implicit casts to assign null to non-nullable pointer
//
// tmp.zig:4:23: error: expected type '*?*i32', found '**i32'
